--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "swc-plugin-de-indent-template-literal",
-  "version": "1.0.0",
-  "description": "SWC plugin for removing indentation of template literals",
+  "name": "swc-plugin-react-slot",
+  "version": "0.0.1",
+  "description": "SWC plugin to transform slot elements into properties",
   "author": "Bernardo Sunderhus <bernardo.sunderhus@gmail.com>",
   "license": "ISC",
   "keywords": [
