--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
   "name": "SWC Plugin",
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
-  "postCreateCommand": "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | bash -s -- -y && . \"$HOME/.cargo/env\" && rustup install nightly && rustup default nightly && cargo install swc_cli && rustup target add wasm32-wasi",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
   "customizations": {
     "vscode": {
       "extensions": [
