--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "@bsunderhus/swc-plugin-react-slot",
-  "version": "0.0.1",
-  "description": "SWC plugin to transform slot elements into properties",
-  "author": "Bernardo Sunderhus <bernardo.sunderhus@gmail.com>",
-  "license": "ISC",
-  "keywords": [
-    "swc-plugin"
-  ],
-  "main": "swc_plugin_react_slot.wasm",
-  "files": [
-    "swc_plugin_react_slot.wasm"
-  ],
+  "name": "react-slot-monorepo",
+  "private": true,
   "scripts": {
-    "build": "cargo build-wasi --release",
-    "prepack": "npm run build && cp target/wasm32-wasi/release/swc_plugin_react_slot.wasm ."
+    "build": "turbo build",
+    "prepack": "turbo prepack"
+  },
+  "devDependencies": {
+    "turbo": "1.12.2"
+  },
+  "packageManager": "pnpm@8.9.0",
+  "engines": {
+    "node": ">=18"
   }
 }
