--- a/turbo.json
+++ b/turbo.json
@@ -2,11 +2,26 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "inputs": ["src", "vite.config.ts", "Cargo.toml"],
+      "outputs": ["dist"]
+    },
+    "build:types": {
+      "dependsOn": ["^build:types"],
+      "inputs": ["src", "tsconfig.json", "tsconfig.*.json"],
+      "outputs": ["dist-tsc"]
+    },
+    "build:api": {
+      "dependsOn": ["^build:api", "build:types"],
+      "inputs": ["src", "api-extractor.json"],
+      "outputs": ["dist"]
     },
     "prepack": {
-      "dependsOn": ["build"],
-      "outputs": ["*.wasm"]
+      "dependsOn": ["build", "build:api"],
+      "outputs": ["*.wasm", "dist"]
+    },
+    "clean": {
+      "cache": false
     }
   }
 }
