--- a/packages/react-sockets/package.json
+++ b/packages/react-sockets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-plugin-react-sockets",
+  "name": "react-sockets",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,19 @@
     "build:api": "api-extractor run --local --verbose",
     "clean": "rimraf dist dist-tsc"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/plugin-syntax-jsx": "^7.23.3",
     "@microsoft/api-extractor": "^7.43.2",
-    "@types/babel__core": "^7.20.5",
-    "@types/node": "^20.12.10",
-    "typescript": "^5.3.3",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-is": "^18.2.4",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vitest": "^1.6.0"
-  },
-  "dependencies": {
-    "@babel/types": "^7.23.9"
   }
 }
