--- a/packages/react-sockets/tsconfig.json
+++ b/packages/react-sockets/tsconfig.json
@@ -6,7 +6,6 @@
   "include": [],
   "references": [
     { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.lib.json" },
-    { "path": "./tsconfig.test.json" }
+    { "path": "./tsconfig.lib.json" }
   ]
 }
