--- a/packages/swc-plugin/package.json
+++ b/packages/swc-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bsunderhus/swc-plugin-react-slot",
+  "name": "swc-plugin-react-slot",
   "version": "0.0.1",
   "description": "SWC plugin to transform slot elements into properties",
   "author": "Bernardo Sunderhus <bernardo.sunderhus@gmail.com>",
@@ -12,7 +12,8 @@
     "swc_plugin_react_slot.wasm"
   ],
   "scripts": {
-    "build": "cargo build-wasi --release",
-    "prepack": "cp target/wasm32-wasi/release/swc_plugin_react_slot.wasm ."
+    "build": "cargo build --target wasm32-wasi --release",
+    "prepack": "cp ../../target/wasm32-wasi/release/swc_plugin_react_slot.wasm .",
+    "clean": "rimraf *.wasm"
   }
 }
