--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -18,7 +18,8 @@
     "@types/node": "^20.12.10",
     "typescript": "^5.3.3",
     "vite": "^5.2.11",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "config": "workspace:*"
   },
   "dependencies": {
     "@babel/types": "^7.23.9"
