--- a/packages/babel-plugin/tsconfig.node.json
+++ b/packages/babel-plugin/tsconfig.node.json
@@ -1,13 +1,8 @@
 {
+  "extends": "config/tsconfig.node.json",
   "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
     "outDir": "dist-tsc",
-    "noEmit": true
+    "composite": true
   },
   "files": ["vite.config.ts", "package.json"]
 }
