--- a/packages/react-sockets/tsconfig.json
+++ b/packages/react-sockets/tsconfig.json
@@ -1,11 +1,11 @@
 {
+  "extends": "config/tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist-tsc",
-    "noEmit": true
+    "outDir": "dist-tsc"
   },
   "include": [],
   "references": [
-    { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.lib.json" }
+    { "path": "./tsconfig.lib.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
