--- a/packages/react-sockets/tsconfig.lib.json
+++ b/packages/react-sockets/tsconfig.lib.json
@@ -1,25 +1,8 @@
 {
+  "extends": "config/tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "isolatedModules": true,
     "outDir": "dist-tsc",
-    "module": "ESNext",
-    "target": "ESNext",
-    "lib": ["ESNext", "DOM"],
-    "moduleResolution": "bundler",
-    "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true,
-    "allowSyntheticDefaultImports": true,
-    "noEmitOnError": true,
-    "emitDeclarationOnly": true,
-    "declaration": true,
-    "declarationMap": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "composite": true
   },
   "include": ["src/**/*.ts"]
 }
