chore: rename package to react-volt

--- a/config/tsconfig.base.json
+++ b/config/tsconfig.base.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "isolatedModules": true,
+    "verbatimModuleSyntax": true,
     "module": "ESNext",
     "target": "ESNext",
     "lib": ["ESNext", "DOM"],
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true,
-    "allowSyntheticDefaultImports": true,
     "noEmitOnError": true,
     "emitDeclarationOnly": true,
     "declaration": true,
