chore(react-volt): less inferences

--- a/packages/react-volt/tsconfig.json
+++ b/packages/react-volt/tsconfig.json
@@ -6,6 +6,7 @@
   "include": [],
   "references": [
     { "path": "./tsconfig.lib.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.test.json" }
   ]
 }
