--- a/packages/react-volt/package.json
+++ b/packages/react-volt/package.json
@@ -10,13 +10,12 @@
     "build:api": "api-extractor run --local --verbose",
     "clean": "rimraf dist dist-tsc"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.43.7",
+    "@microsoft/api-extractor": "^7.44.1",
     "@rollup/plugin-swc": "^0.3.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -27,7 +26,10 @@
     "vite": "^5.2.11",
     "vitest": "^1.6.0"
   },
-  "files": ["dist", "*.md"],
+  "files": [
+    "dist",
+    "*.md"
+  ],
   "main": "./dist/react-volt.cjs",
   "module": "./dist/react-volt.js",
   "typings": "./dist/react-volt.d.ts",
