--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "turbo build",
     "build:types": "turbo build:types",
+    "build:api": "turbo build:api",
     "prepack": "turbo prepack",
     "clean": "turbo clean"
   },
