--- a/packages/react-volt/tsconfig.lib.json
+++ b/packages/react-volt/tsconfig.lib.json
@@ -4,5 +4,6 @@
     "outDir": "dist-tsc",
     "composite": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/vite-env.d.ts", "src/**/*.ts"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
