--- a/packages/react-volt/tsconfig.lib.json
+++ b/packages/react-volt/tsconfig.lib.json
@@ -5,5 +5,10 @@
     "composite": true
   },
   "include": ["src/vite-env.d.ts", "src/**/*.ts"],
-  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.test-d.ts",
+    "src/**/*.test-d.tsx"
+  ]
 }
