chore: support both distributive pattern as well as flattening + react-volt/tests + plug.extend with variadic tuple types

--- a/config/tsconfig.paths.json
+++ b/config/tsconfig.paths.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "react-volt": ["../packages/react-volt/src/index.ts"]
+      "react-volt": ["../packages/react-volt/src/index.ts"],
+      "react-volt/test": ["../packages/react-volt/src/test/index.ts"]
     }
   }
 }
