--- a/packages/react-volt/package.json
+++ b/packages/react-volt/package.json
@@ -5,22 +5,26 @@
   "type": "module",
   "scripts": {
     "dev": "vitest run",
-    "build": "vite build",
-    "build:types": "tsc -b tsconfig.lib.json",
-    "build:types:test": "tsc -b tsconfig.test.json",
-    "build:api": "pnpm run build:api:lib && pnpm run build:api:test",
+    "build:src": "vite build",
+    "build:types:lib": "tsc -b ./src/lib/tsconfig.json",
+    "build:types:test": "tsc -b ./src/test/tsconfig.json",
+    "build:types:jsx": "tsc -b ./src/jsx/tsconfig.json",
     "build:api:lib": "api-extractor run --config api-extractor.json --local --verbose",
     "build:api:test": "api-extractor run --config api-extractor.test.json --local --verbose",
+    "build:api:jsx-runtime": "api-extractor run --config api-extractor.jsx-runtime.json --local --verbose",
+    "build:api:jsx-dev-runtime": "api-extractor run --config api-extractor.jsx-dev-runtime.json --local --verbose",
     "clean": "rimraf dist dist-tsc",
     "test": "vitest run"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-is": "^18.3.1"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.47.0",
     "@rollup/plugin-swc": "^0.3.0",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-is": "^18.2.4",
@@ -51,6 +55,16 @@
       "types": "./dist/test.d.ts",
       "import": "./dist/test.js",
       "require": "./dist/test.js"
+    },
+    "./jsx-runtime": {
+      "types": "./dist/jsx-runtime.d.ts",
+      "import": "./dist/jsx-runtime.js",
+      "require": "./dist/jsx-runtime.js"
+    },
+    "./jsx-dev-runtime": {
+      "types": "./dist/jsx-dev-runtime.d.ts",
+      "import": "./dist/jsx-dev-runtime.js",
+      "require": "./dist/jsx-dev-runtime.js"
     },
     "./package.json": "./package.json"
   }
